@@ -1,6 +1,7 @@
 17 April 2009: Wouter
 	- Fix reentrant in minievent handler for unix. Could have resulted
 	  in spurious event callbacks.
+	- timers do not take up a fd slot for winsock handler.
 
 16 April 2009: Wouter
 	- winsock event handler exit very quickly on signal, even if
